<resources>
    <string name="app_name">In The Loop</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="signin_text">Sign-in</string>
    <string name="register_text">Register</string>
    <string name="no_email_pw">Please fill in your email/password</string>
    <string name="login_in_progress">Logging in…</string>
    <string name="name_text">Name</string>
    <string name="rc_text">Residential College</string>
    <string name="contact_num_text">Contact Number</string>
    <string name="confirm_password_text">Confirm password</string>
    <string name="validate_text">Please check that all fields are filled in and are correct</string>
    <string name="create_new_event">Create new event</string>
    <string name="my_organised_events">My organised events</string>
    <string name="event_organisers">Event Organisers</string>
    <string name="event_name">Event Name</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="venue">Venue</string>
    <string name="event_desc">Event Description</string>
    <string name="upload_img">Upload Image</string>
    <string name="change_selected_img">Change Selected Image</string>
    <string name="qrcode_scanner">QRCode Scanner</string>
    <string name="scan">SCAN</string>
    <string name="enter_text_here">Enter Text Here</string>
    <string name="click_here_to_generate_qr_code">CLICK HERE TO generate qr code</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="date_formatted">Date: %1$s</string>
    <string name="time_formatted">Time: %1$s</string>
    <string name="venue_formatted">Venue: %1$s</string>
    <string name="save_changes">Save Changes</string>
    <string name="change_img">Change image</string>
    <string name="my_signed_up_events">My Signed-up Events</string>
    <string name="name_formatted">Name: %1$s</string>
    <string name="email_formatted">Email: %1$s</string>
    <string name="rc_formatted">Residential College: %1$s</string>
    <string name="scan_signup">Scan &amp; Sign-up</string>
    <string name="signup">Sign-up</string>
    <string name="signup_success">Sign-up successful!</string>
    <string name="already_signed_up">Already signed-up</string>
    <string name="withdraw">Withdraw from Event</string>
    <string name="withdrawn_from_event">Successfully withdrawn from event</string>
    <string name="invalid_event_code">Invalid event code!</string>
    <string name="total_attendance">Total attendance</string>
    <string name="total_attendance_formatted">Total attendance: %1$s</string>
    <string name="check_attendance">Check attendance</string>
    <string name="search_for_event">Search for an event</string>
    <string name="go">Go</string>
    <string name="admin_functions">Administrator Functions</string>
    <string name="approve_pending_events">Approve pending events</string>
    <string name="del_existing_events">Delete existing events</string>
    <string name="total_pending_formatted">Total pending: %1$s</string>
    <string name="approve">Approve</string>
    <string name="remove">Remove</string>
    <string name="approval_status">Approval Status</string>
    <string name="approval_status_formatted">Approval Status: %1$s</string>
    <string name="upload_error">There was an error with the picture upload! Please try again.</string>
    <string name="creating_event">Creating event...</string>


    <string-array name="rc_list">
        <item>Select a Residential College</item>
        <item>College of Alice and Peter Tan</item>
        <item>Residential College 4</item>
        <item>Cinnamon College (USP)</item>
        <item>Tembusu College</item>
        <item>Ridge View Residential College</item>
    </string-array>
</resources>
