<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/eventDetailsOrgImg"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:src="@color/common_google_signin_btn_text_dark_disabled" />

        <Button
            android:id="@+id/eventDetailsOrgAttendanceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_attendance"
            android:onClick="checkAttendance"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/eventDetailsOrgDeleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete"
                android:onClick="delete"/>

            <Button
                android:id="@+id/eventDetailsOrgEditButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/edit"
                android:onClick="edit"/>

        </LinearLayout>

        <TextView
            android:id="@+id/eventDetailsOrgNameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/event_name"
            android:textAlignment="center"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/eventDetailsOrgDateView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/date"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/eventDetailsOrgTimeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/time"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/eventDetailsOrgVenueView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/venue"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/eventDetailsOrgDescView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_desc"
            android:textSize="14sp" />

    </LinearLayout>
</ScrollView>