<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/eventDetailsMyImg"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:src="@color/common_google_signin_btn_text_dark_disabled" />

        <TextView
            android:id="@+id/eventDetailsMyNameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/event_name"
            android:textAlignment="center"
            android:textSize="36sp" />

        <Button
            android:id="@+id/eventDetailsMyWithdrawButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/withdraw"
            android:onClick="withdraw"/>

        <TextView
            android:id="@+id/eventDetailsMyDateView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/date"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/eventDetailsMyTimeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/time"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/eventDetailsMyVenueView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/venue"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/eventDetailsMyDescView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_desc"
            android:textSize="14sp" />

    </LinearLayout>
</ScrollView>